Fixed gap and footer
git-svn-id: https://research-cs194.googlecode.com/svn/trunk/research@58 3207efe2-bddd-11de-9616-7b1d4728551e

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -109,6 +109,7 @@ width: 100%;
 
 #content{	
 	padding: 50px;
+	margin-top: 20px;
 	padding-top: 30px;
 	/*position: relative;
 	top: -159px;*/
@@ -120,18 +121,16 @@ width: 100%;
 }
 
 #footer{
-	display: none;
+	
 	position: relative;
-	bottom: 0px;
+	margin-bottom: 0px;
 	overflow: hidden;	
 }
 
 #footer_inside{
-	
-	width: 2000px;
-	height: 80px;
-	background: url("../images/footer.png");
-
+	color: gray;
+	text-align: center;
+	height: 40px;
 }
 
 /**HOME**/
@@ -181,6 +180,9 @@ width: 100%;
 
 /**Menu**/
 
+#department_speech{
+	display: none;
+}
 #department_speech_top{
 	width: 163px;
 	height: 32px;
